add Java aliases, use 1.6 by default